# trimit-human-in-loop

./: .env.example  .gitignore  15557970_raw_transcript.json  2137038995.json  Makefile  README.md  check_function_call_results?modal_call_ids=fc&timeout=0  check_function_call_results?modal_call_ids=fc-01J192MXCKC0FXB5FTJJBGE0S6&timeout=0  copy_gen_to_s3.sh  deploy.sh  pyproject.toml  search_term.sh
trimit/: deploy.py  pyproject.toml
trimit/api/: image.py  index.py  utils.py
trimit/app/: app.py
trimit/backend/: __init__.py  background_processor.py  conf.py  cut_transcript.py  diarization.py  image.py  memory.py  models.py  serve.py  speaker_in_frame_detection.py  transcription.py  utils.py
trimit/export/: email.py  export.py  utils.py
trimit/frontend/: .gitignore  .pnp.cjs  components.json  next.config.js  package.json
trimit/frontend/api/: image.py  index.py
trimit/frontend/app/: layout.tsx  page.tsx
trimit/frontend/lib/: streams.ts  (+1 more)
trimit/models/: __init__.py  backend_models.py  models.py
trimit/prompt_templates/: choose_best_take.langchain  clarify_segment_in_timeline.jinja2  critique_cut_detailed_task_description.jinja2  critique_cut_detailed_task_description_no_remove.jinja2  cut_partial_detailed_task_description.jinja2  cut_partial_extra_notes.jinja2  cut_partial_high_level_preamble.jinja2  cut_partial_transcript.jinja2  find_leftover_transcript_offsets_using_llm.jinja2  generate_high_level_story.jinja2  generate_high_level_story.langchain  generate_high_level_story_with_scene_lookup.langchain  generate_timeline.jinja2  generate_timeline.langchain  generate_timeline2.jinja2  generate_timeline_segment.langchain  generate_timeline_segment_output.langchain  generic_json_bool_response.jinja2  identify_interviewees.jinja2  identify_key_soundbites.jinja2  identify_partial_soundbites_to_redo_from_user_feedback.jinja2  identify_partial_transcript_chunks_to_redo_from_user_feedback.jinja2  linear_workflow_story.jinja2  match_takes.jinja2  modification.jinja2  modify_detailed_task_description.jinja2  modify_extra_notes.jinja2  modify_high_level_preamble.jinja2  modify_holistically.jinja2  parse_user_prompt_for_story_retry.jinja2  parse_user_prompt_for_transcript_retry.jinja2  remove_from_final_transcript.jinja2  remove_soundbites.jinja2  shared_example.jinja2  shared_example_no_remove.jinja2  shared_important_summary.jinja2  shared_important_summary_no_remove.jinja2  shared_output_requirements.jinja2  shared_output_requirements_no_remove.jinja2  soundbite_user_feedback_prompt.jinja2  (+7 more)
trimit/utils/: async_utils.py  audio_utils.py  auth.py  cache.py  conf.py  frame_extraction.py  fs_utils.py  misc.py  modal_utils.py  model_utils.py  namegen.py  openai.py  prompt_engineering.py  rate_limit.py  scene_extraction.py  string.py  upload.py  video_utils.py
(+108 files in other folders)
