[tool.poetry]
name = "trimit"
version = "0.1.0"
description = "human-in-the-loop ai-powered video editor"
authors = ["Ben Schreck <ben@benschreck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
